<resources>
    <string name="app_name">base</string>
    <string name="复制成功">复制成功</string>
    <string name="生活圈">生活圈</string>
    <string name="倒计时">倒计时</string>
    <string name="天">天</string>
    <string name="时">时</string>
    <string name="分">分</string>
    <string name="立即报名">立即报名</string>
    <string name="scan_code">扫码</string>
    <string name="剩余名额">剩余名额</string>
    <string name="位">位</string>
    <string name="输入课程名称">输入课程名称</string>
    <string name="one_click_login">一键登录</string>
    <string name="other_ways_to_login">验证码登录</string>
    <string name="one_click_login_error">一键登录失败</string>
    <string name="one_click_login_sucess">一键登录成功</string>
    <string name="hot_ser">热门搜索</string>
    <string name="hot_city">热门城市</string>
    <string name="home_no_following">您没有关注任何人</string>
    <string name="保存图片">保存图片</string>
    <string name="确定">确定</string>
    <string name="保存成功">保存成功</string>
    <string name="取消">取消</string>
    <string name="输入搜索内容">输入搜索内容</string>
    <string name="热门搜索">热门搜索</string>
    <string name="历史搜索">历史搜索</string>
    <string name="确认清空所有历史记录">确认清空所有历史记录</string>
    <string name="确认清空">确认清空</string>
    <string name="将二维码放入框内即可自动扫描">将二维码放入框内，即可自动扫描</string>
    <string name="扫码失败">扫码失败</string>
    <string name="shar_to">分享到</string>
    <string name="去支付">去支付</string>
    <string name="东家账单">东家账单</string>
    <string name="复制">复制</string>
    <string name="直接推荐">直接推荐</string>
    <string name="间接推荐">间接推荐</string>
    <string name="plus东家PLUS">东家PLUS</string>
    <string name="去充值">去充值</string>
    <string name="我的卡包">我的卡包</string>
    <string name="全部">全部</string>
    <string name="余额">余额</string>
    <string name="load_error_re">加载失败，请点击屏幕重试</string>
    <string name="not_data">暂无数据</string>
    <string name="暂无交易记录">暂无交易记录</string>
    <string name="暂无会员卡">暂无会员卡</string>
    <string name="邀请时间">邀请时间</string>
    <string name="收益总额">收益总额</string>
    <string name="搜索">搜索</string>
    <string name="护照号">护照号</string>
    <string name="暂无推荐关系">暂无推荐关系</string>
    <string name="请输入搜索内容">请输入搜索内容</string>
    <string name="东家会员卡">东家会员卡</string>
    <string name="元">元</string>
    <string name="消费总额">消费总额</string>
    <string name="不参与优惠金额">不参与优惠金额</string>
    <string name="PLUS余额支付">PLUS余额支付</string>
    <string name="当前余额">当前余额</string>
    <string name="东家会员支付">东家会员支付</string>
    <string name="消费金额">消费金额</string>
    <string name="PLUS余额">PLUS支付</string>
    <string name="东家会员余额">东家会员支付</string>
    <string name="应付">应付</string>
    <string name="支付方式">支付方式</string>
    <string name="微信支付">微信支付</string>
    <string name="支付宝支付">支付宝支付</string>
    <string name="买单">买单</string>
    <string name="确认支付">确认支付</string>
    <string name="curre_city">当前城市：</string>
    <string name="login_sucess">登录成功</string>
    <string name="支付成功">支付成功</string>
    <string name="返回商家首页">返回商家首页</string>
    <string name="恭喜本次充值成功">恭喜！本次充值成功</string>
    <string name="支付失败">支付失败</string>
    <string name="本次交易支付失败">本次交易支付失败</string>
    <string name="重新支付">重新支付</string>
    <string name="东家参加">东家参加</string>
    <string name="常用工具">常用工具</string>
    <string name="未支付">未支付</string>
    <string name="已支付">已支付</string>
    <string name="已关闭">已关闭</string>
    <string name="订单号">订单号</string>
    <string name="付款方式">付款方式</string>
    <string name="付款时间">付款时间</string>
    <string name="搜索无结果">搜索无结果</string>
    <string name="关闭">关闭</string>
    <string name="订单详情">订单详情</string>
    <string name="东家人数">东家人数</string>
    <string name="讲师">讲师</string>
    <string name="课件时长">课件时长</string>
    <string name="活动时间">活动时间</string>
    <string name="地址">地址</string>
    <string name="分享">分享</string>
    <string name="输入商户分类">输入商户、分类</string>
    <string name="已报名">已报名</string>
    <string name="清除缓存">清除缓存</string>
    <string name="退出登录">退出登录</string>
    <string name="是否退出登录">是否退出登录</string>
    <string name="设置">设置</string>
    <string name="清除缓存成功">清除缓存成功</string>
    <string name="请输入护照号">请输入护照号</string>
    <string name="相册">相册</string>
    <string name="拍照">拍照</string>
    <string name="未开始">未开始</string>
    <string name="已结束">已结束</string>
    <string name="电子会员卡">电子会员卡</string>
    <string name="环境切换">环境切换</string>
    <string name="活动已结束">活动已结束</string>
    <string name="正在上传">正在上传</string>
    <string name="上传失败">上传失败</string>
    <string name="百度地图">百度地图</string>
    <string name="暂无课程">暂无课程</string>
    <string name="个视频">个视频</string>
    <string name="高德地图">高德地图</string>
    <string name="腾讯地图">腾讯地图</string>
    <string name="余额不足">余额不足</string>
    <string name="本次交易支付成功">本次交易支付成功</string>
    <string name="充值成功">充值成功</string>
    <string name="返回">返回</string>
    <string name="充值失败">充值失败</string>
    <string name="本次充值失败">本次充值失败</string>
    <string name="暂无权限">暂无权限</string>
    <string name="下载">下载</string>
    <string name="下载进度">下载进度</string>
    <string name="下载成功">下载成功</string>
    <string name="进入">进入</string>
    <string name="关注成功">关注成功</string>
    <string name="暂无卡包">暂无卡包</string>
    <string name="att_sucess">关注成功</string>
    <string name="新版本升级">新版本升级</string>
    <string name="残忍拒绝">残忍拒绝</string>
    <string name="立即体验">立即体验</string>
    <string name="充值方式">充值方式</string>
    <string name="充值时间">充值时间</string>
    <string name="input_moey_not_null">输入金额不能为空</string>
    <string name="注册时间">注册时间</string>
    <string name="等待返回支付结果">等待返回支付结果</string>
    <string name="检测到你可能在模拟器上运行应用即将关闭">检测到你可能在模拟器上运行应用即将关闭</string>
    <string name="风险提示">风险提示</string>
    <string name="店铺已下架">店铺已下架</string>
    <string name="店铺待上架">店铺待上架</string>
    <string name="暂无活动">暂无活动</string>
</resources>