<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical">

    <com.aries.ui.view.radius.RadiusLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:rv_backgroundColor="@color/white_bg"
        app:rv_radius="@dimen/dp_15">

        <TextView
            android:id="@+id/tv_takePhoto"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:gravity="center"
            android:textColor="@color/color_ff171b20"
            android:textSize="@dimen/sp_19"
            android:text="@string/拍照" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_fff9f9f9" />

        <com.aries.ui.view.radius.RadiusTextView
            android:id="@+id/rtv_selectFromAlbum"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:gravity="center"
            android:textColor="@color/color_ff171b20"
            android:textSize="@dimen/sp_19"
            app:rv_backgroundColor="@color/white_bg"
            app:rv_bottomLeftRadius="@dimen/dp_15"
            app:rv_bottomRightRadius="@dimen/dp_15"
            android:text="@string/相册" />
    </com.aries.ui.view.radius.RadiusLinearLayout>

    <com.aries.ui.view.radius.RadiusTextView
        android:id="@+id/rtv_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:gravity="center"
        android:textSize="@dimen/sp_19"
        app:rv_backgroundColor="@color/white_bg"
        app:rv_radius="@dimen/dp_15"
        app:rv_textColor="@color/color_ff2d2e32"
        android:text="@string/取消" />
</LinearLayout>