<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fff7f9fc">

    <include layout="@layout/layout_comment_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tv_payMethod"
        android:layout_below="@+id/abl_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_56"
                android:layout_marginTop="@dimen/dp_11"
                android:background="@color/white_bg"
                android:paddingStart="@dimen/dp_15"
                android:paddingEnd="@dimen/dp_15">

                <TextView
                    android:id="@+id/tv_consumeTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/消费总额"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16" />

                <EditText
                    android:id="@+id/et_consumeTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:layout_toStartOf="@+id/tv_yuan"
                    android:layout_toEndOf="@+id/tv_consumeTotal"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:focusable="true"
                    android:gravity="end"
                    android:hint="0.00"
                    android:inputType="numberDecimal"
                    android:textColor="@color/color_ffff647c"
                    android:textColorHint="@color/color_ffff647c"
                    android:textCursorDrawable="@null"
                    tools:text="338.00" />

                <TextView
                    android:id="@+id/tv_yuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/元"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_56"
                android:layout_marginTop="@dimen/dp_1"
                android:background="@color/white_bg"
                android:paddingStart="@dimen/dp_15"
                android:paddingEnd="@dimen/dp_15"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_notPreferentialAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/不参与优惠金额"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16" />

                <EditText
                    android:id="@+id/et_notPreferentialAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:layout_toStartOf="@+id/tv_yuan2"
                    android:layout_toEndOf="@+id/tv_notPreferentialAmount"
                    android:background="@null"
                    android:gravity="end"
                    android:hint="0.00"
                    android:inputType="numberDecimal"
                    android:textColor="@color/color_ff171b20"
                    android:textColorHint="@color/color_ff171b20"
                    android:textCursorDrawable="@null"
                    tools:text="338.00" />

                <TextView
                    android:id="@+id/tv_yuan2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/元"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:paddingStart="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/消费金额"
                    android:textColor="@color/color_ff808a96"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/tv_consumeAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="¥0.00"
                    android:textColor="@color/color_ff171b20"
                    android:textSize="@dimen/sp_14" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_balanceChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:paddingStart="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_20">

                <TextView
                    android:id="@+id/tv_balanceChangeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_ff808a96"
                    android:textSize="@dimen/sp_14"
                    tools:text="@string/PLUS余额" />

                <TextView
                    android:id="@+id/tv_balanceChange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="¥0.00"
                    android:textColor="@color/color_ffff647c"
                    android:textSize="@dimen/sp_14" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/应付"
                    android:textColor="@color/color_ff808a96"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:id="@+id/tv_shouldPay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_8"
                    android:text="¥0.00"
                    android:textColor="@color/color_ff171b20"
                    android:textSize="@dimen/sp_18" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/tv_payMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_payMethod"
        android:background="@mipmap/ic_tab_shadow"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/dp_40"
        android:text="@string/支付方式"
        android:textColor="@color/color_ff171b20"
        android:textSize="@dimen/sp_18" />

    <RelativeLayout
        android:id="@+id/rl_payMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white_bg">

        <LinearLayout
            android:id="@+id/ll_payMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_plus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_56"
                    android:layout_marginStart="@dimen/dp_16"
                    android:drawableStart="@mipmap/ic_plus"
                    android:drawablePadding="@dimen/dp_12"
                    android:gravity="center"
                    android:text="@string/PLUS余额支付"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:id="@+id/tv_plusBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    tools:text="(当前余额 ¥338)" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_dong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_dong"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_56"
                    android:layout_marginStart="@dimen/dp_16"
                    android:drawableStart="@mipmap/ic_dong"
                    android:drawablePadding="@dimen/dp_12"
                    android:gravity="center"
                    android:text="@string/东家会员支付"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:id="@+id/tv_dongBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_5"
                    tools:text="(当前余额 ¥338)" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_wx"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_56"
                android:layout_marginStart="@dimen/dp_16"
                android:drawableStart="@mipmap/ic_wx"
                android:drawablePadding="@dimen/dp_12"
                android:gravity="center"
                android:text="@string/微信支付"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv_aliPay"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_56"
                android:layout_marginStart="@dimen/dp_16"
                android:drawableStart="@mipmap/ic_alipay"
                android:drawablePadding="@dimen/dp_12"
                android:gravity="center"
                android:text="@string/支付宝支付"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                android:visibility="gone" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rg_payMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ll_payMethod"
            android:layout_alignBottom="@+id/ll_payMethod"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/dp_16"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_plus"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_0"
                android:layout_weight="1"
                android:button="@drawable/selector_pay_method"
                android:checked="true" />

            <RadioButton
                android:id="@+id/rb_dong"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_0"
                android:layout_weight="1"
                android:button="@drawable/selector_pay_method" />

            <RadioButton
                android:id="@+id/rb_wx"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_0"
                android:layout_weight="1"
                android:button="@drawable/selector_pay_method" />

            <RadioButton
                android:id="@+id/rb_aliPay"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_0"
                android:layout_weight="1"
                android:button="@drawable/selector_pay_method"
                android:visibility="gone" />
        </RadioGroup>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_countDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_payMethod"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_19"
            android:layout_marginEnd="@dimen/dp_30"
            android:layout_marginBottom="@dimen/dp_48"
            app:cardCornerRadius="@dimen/dp_25"
            app:cardElevation="@dimen/dp_10">

            <TextView
                android:id="@+id/tv_makeSure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/shape_life_circle_countdown"
                android:gravity="center"
                android:text="@string/确认支付"
                android:textColor="@color/color_ff221503"
                android:textSize="@dimen/sp_18" />
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</RelativeLayout>