<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fff7f9fc"
    android:orientation="vertical">

    <include layout="@layout/layout_comment_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:background="@color/white_bg"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_dateSort"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_32"
                android:text="@string/注册时间"
                android:textColor="@color/color_ff2d2e32"
                android:textSize="@dimen/sp_14" />

            <ImageView
                android:id="@+id/iv_dateArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp_3"
                android:src="@mipmap/ic_sort_arrow_down" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_incomeSort"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:id="@+id/tv_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_32"
                android:text="@string/收益总额"
                android:textColor="@color/color_ff2d2e32"
                android:textSize="@dimen/sp_14" />

            <ImageView
                android:id="@+id/iv_incomeArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp_3"
                android:src="@mipmap/ic_sort_arrow_down" />
        </LinearLayout>

        <com.aries.ui.view.radius.RadiusLinearLayout
            android:id="@+id/rll_search"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_28"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:rv_backgroundColor="@color/color_fff0f3f7"
            app:rv_radius="@dimen/dp_18">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp_8"
                android:src="@mipmap/ic_search" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp_3"
                android:gravity="center_vertical"
                android:text="@string/搜索"
                android:textColor="@color/color_ff808a96"
                android:textSize="@dimen/sp_13" />
        </com.aries.ui.view.radius.RadiusLinearLayout>
    </LinearLayout>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/srl_recommend"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recommend"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
</LinearLayout>